--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -2,3 +2,13 @@
   font-family: 'Montserrat-Medium';
   src: url('../assets/fonts/Montserrat-Medium.ttf');
 }
+
+.form__title {
+  margin-bottom: 40px;
+}
+.v-input__control {
+  margin-bottom: 8px;
+}
+.v-text-field--rounded > .v-input__control > .v-input__slot {
+  padding: 8px 24px !important;
+}
