Реализован обработчик ошибок

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -12,3 +12,6 @@
 .v-text-field--rounded > .v-input__control > .v-input__slot {
   padding: 8px 24px !important;
 }
+.message__error {
+  color: #ff0000;
+}
