--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -2,6 +2,10 @@
   font-family: 'Montserrat-Medium';
   src: url('../assets/fonts/Montserrat-Medium.ttf');
 }
+@font-face {
+  font-family: 'Montserrat-Bold';
+  src: url('../assets/fonts/Montserrat-Bold.ttf');
+}
 
 .form__title {
   margin-bottom: 40px;
